--- a/allim/allimApp/templates/add_course.html
+++ b/allim/allimApp/templates/add_course.html
@@ -29,7 +29,7 @@
         {% csrf_token %}
         
         <div class="mb-4">
-          <label for="title" class="block text-gray-700 font-semibold mb-2">Course Title</label>
+          <label for="title" class="block text-gray-700 font-semibold mb-2">Course Name</label>
           <input type="text" id="title" name="title" required
                  class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400">
         </div>
