--- a/allim/allimApp/templates/teacher_dashboard.html
+++ b/allim/allimApp/templates/teacher_dashboard.html
@@ -28,18 +28,29 @@
       </div>
 
       <h3 class="text-2xl font-semibold mb-4">Your Courses</h3>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-8">
+      <div class="container mx-auto px-4">
+      <div class="grid grid-cols-1 md:grid-cols-4 gap-4 mb-8">
         {% for course in courses %}
         <div class="bg-white p-4 rounded shadow">
           <h4 class="text-lg font-semibold">{{ course.course_name }}</h4>
           <p class="text-gray-500 text-sm">{{ course.description }}</p>
-          <!-- <p class="text-sm mt-2 text-gray-600">Enrollments {{ course.enrollments }}</p> -->
+      
+          <div class="mt-4 flex space-x-2">
+            <a href="/delete_course/{{course.id}}"
+               class="bg-red-500 hover:bg-red-600 text-white px-3 py-1 rounded text-sm font-medium">
+              Delete
+            </a>
+            <a href=""
+               class="bg-blue-500 hover:bg-blue-600 text-white px-3 py-1 rounded text-sm font-medium">
+              Add Lecture
+            </a>
+          </div>
         </div>
         {% empty %}
         <p>No courses available.</p>
         {% endfor %}
       </div>
-
+    </div>
       <h3 class="text-2xl font-semibold mb-4">Students</h3>
       <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
         {% for student in students %}
