--- a/allim/allimApp/templates/edit_student_profile.html
+++ b/allim/allimApp/templates/edit_student_profile.html
@@ -34,8 +34,7 @@
           <input type="text" name="last_name" value="{{ student.last_name }}" required class="w-full border border-gray-300 p-2 rounded" />
         </div>
         <div class="mb-4">
-          <label class="block text-gray-700 font-semibold">Email</label>
-          <input type="email" name="email" value="{{ student.email }}" required class="w-full border border-gray-300 p-2 rounded" />
+          <input type="hidden" name="email" value="{{ student.email }}" required class="w-full border border-gray-300 p-2 rounded" />
         </div>
         <div class="flex justify-end">
           <button type="submit" class="bg-[#2e5583] text-white px-4 py-2 rounded hover:bg-[#24486d]">Save Changes</button>
