--- a/allim/allimApp/static/allimApp/css/index.css
+++ b/allim/allimApp/static/allimApp/css/index.css
@@ -47,6 +47,40 @@ body {
 .navbar-nav .fw-bold {
     font-weight: 600;
 }
+.custom-search{
+  width: 100%;
+  border: none;
+  outline: none;
+  padding: 14px;
+  font-size: 16px;
+  background: transparent;
+}
+
+.search-con{
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding: 5px 15px;
+  border: 1px solid #ccc;
+  border-radius: 50px;
+  width: 30%;
+  margin: 0 auto;
+  background: transparent;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0,3s;
+}
+
+.search-con i{
+  font-size: 18px;
+  cursor: pointer;
+  margin-left: 10px;
+  color: #666;
+}
+
+.search-con:hover{
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+
+}
 
 .student-txt {
     display: flex;
@@ -208,9 +242,10 @@ body {
 }
 
 .custom-card.highlight {
-    transform: scale(1.15);
-    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.2);
-    z-index: 3;
+  transform: scale(1.05);
+  transition: transform 0.3s ease;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.3);
+  z-index: 10;
 }
 
 .custom-card.highlight img {
